# goat

./: .gitignore  README.md  pyproject.toml  requirements.dev.txt  requirements.txt  scrapy.cfg
.github/workflows/: main.yaml
goat/: dataset_demonstration.py  dataset_utils.py  ege_data.jsonl  items.py  middlewares.py  pipelines.py  settings.py  spider_utils.py
goat/backend/: Dockerfile  add_results.py  docker-compose.yml  eval.py  requirements.txt
goat/database/: bd_init_script.sql
goat/frontend/: app.py  precision.py  requirements.txt  src_display.css
goat/parser/: dataset_demonstration.py  middlewares.py  settings.py  spider_utils.py
goat/parser/spiders/: sdamgia_spider.py
goat/spiders/: ege_spider.py  sdamgia_spider.py
goat/utils/: database_helper.py
scripts/leaderboard_backend/: add_result.py  build_script.sh  database_helper.py  eval.py  eval_script.sh
scripts/leaderboard_web/: app.py  database_helper.py  src_display_css_html_js.py
scripts/validation/: README.md  arg_parser.py  prompts.json  scripts_utils.py  validate.py
src/: dataset_demonstration.py
src/sdamgia_parser/: scrapy.cfg
src/sdamgia_parser/sdamgia_parser/: items.py  settings.py  spider_utils.py
src/sdamgia_parser/sdamgia_parser/spiders/: ege_spider.py
tests/: test_model.py  test_prompt_generation.py
tests/data/: expected_prompt.txt  prompt_testing_dataset.jsonl
