[metadata]
name = "goat"
author = "deepvk, VyrodovMikhail"
url = "https://github.com/deepvk/goat"

[project]
name = "goat"
version="0.0.0"
authors = [
    {name="deepvk, VyrodovMikhail"}
]
description = "A framework for evaluating language models"
readme = "README.md"
license = { "text" = "Apache-2.0" }
requires-python = ">=3.8"
dependencies = [
    "beautifulsoup4>=4.12.2",
    "packaging",
    "numpy",
    "pandas",
    "requests",
    "typer<0.10.0",
    "Scrapy>=2.11.0",
    "gradio",
    "psycopg2>=2.9.9",
    "SQLAlchemy>=2.0.29",
    "torch==2.2.0",
    "torchdata==0.7.1",
    "torchtext==0.17.0",
    "torchvision==0.17.0",
    "transformer_engine==0.0.0",
    "lm_eval@git+https://github.com/deepvk/lm-evaluation-harness@goat",
    "fschat[model_worker,llm_judge]@git+https://github.com/deepvk/FastChat/@goat",
]

[tool.isort]
profile = "black"
line_length = 120

[tool.black]
line-length = 120

[tool.mypy]
files = ["goat"]
install_types = "True"
non_interactive = "True"
disallow_untyped_defs = "True"
ignore_missing_imports = "True"
show_error_codes = "True"
warn_redundant_casts = "True"
warn_unused_configs = "True"
warn_unused_ignores = "True"
allow_redefinition = "True"
warn_no_return = "False"
no_implicit_optional = "False"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--color=yes", "-s"]
